# aoc2025

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
src/: harness.hpp  main.cpp
src/day01/: solver.hpp
src/day02/: solver.hpp
src/day03/: solver.hpp
src/day04/: solver.hpp
